@@ -1,6 +1,6 @@
 //
 //  ========================================================================
-//  Copyright (c) 1995-2018 Mort Bay Consulting Pty. Ltd.
+//  Copyright (c) 1995-2019 Mort Bay Consulting Pty. Ltd.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
@@ -26,22 +26,30 @@ import java.io.OutputStream;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 import java.util.StringTokenizer;
+import java.util.jar.Manifest;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 import org.eclipse.jetty.start.Props.Prop;
 import org.eclipse.jetty.start.config.ConfigSource;
 import org.eclipse.jetty.start.config.ConfigSources;
 import org.eclipse.jetty.start.config.DirConfigSource;
 import org.eclipse.jetty.util.JavaVersion;
+import org.eclipse.jetty.util.ManifestUtils;
 
 /**
  * The Arguments required to start Jetty.
@@ -53,21 +61,17 @@ public class StartArgs
     static
     {
         // Use command line versions
-        String ver = System.getProperty("jetty.version",null);
-        String tag = System.getProperty("jetty.tag.version","master");
+        String ver = System.getProperty("jetty.version", null);
+        String tag = System.getProperty("jetty.tag.version", "master");
 
         // Use META-INF/MANIFEST.MF versions
         if (ver == null)
         {
-            Package pkg = StartArgs.class.getPackage();
-            if ((pkg != null) && "Eclipse.org - Jetty".equals(pkg.getImplementationVendor()) && (pkg.getImplementationVersion() != null))
-            {
-                ver = pkg.getImplementationVersion();
-                if (tag == null)
-                {
-                    tag = "jetty-" + ver;
-                }
-            }
+            ver = ManifestUtils.getManifest(StartArgs.class)
+                .map(Manifest::getMainAttributes)
+                .filter(attributes -> "Eclipse Jetty Project".equals(attributes.getValue("Implementation-Vendor")))
+                .map(attributes -> attributes.getValue("Implementation-Version"))
+                .orElse(null);
         }
 
         // Use jetty-version.properties values
@@ -82,9 +86,9 @@ public class StartArgs
                     props.load(in);
                     ver = props.getProperty("jetty.version");
                 }
-                catch (IOException ignore)
+                catch (IOException x)
                 {
-                    StartLog.debug(ignore);
+                    StartLog.debug(x);
                 }
             }
         }
@@ -94,75 +98,116 @@ public class StartArgs
         {
             ver = "0.0";
             if (tag == null)
-            {
                 tag = "master";
-            }
+        }
+        else
+        {
+            if (tag == null)
+                tag = "jetty-" + ver;
         }
 
         // Set Tag Defaults
-        if (tag == null || tag.contains("-SNAPSHOT"))
-        {
+        if (tag.contains("-SNAPSHOT"))
             tag = "master";
-        }
 
         VERSION = ver;
-        System.setProperty("jetty.version",VERSION);
-        System.setProperty("jetty.tag.version",tag);
+        System.setProperty("jetty.version", VERSION);
+        System.setProperty("jetty.tag.version", tag);
     }
 
-    private static final String SERVER_MAIN = "org.eclipse.jetty.xml.XmlConfiguration";
+    private static final String MAIN_CLASS = "org.eclipse.jetty.xml.XmlConfiguration";
+    private static final String MODULE_MAIN_CLASS = "org.eclipse.jetty.xml/org.eclipse.jetty.xml.XmlConfiguration";
 
     private final BaseHome baseHome;
 
-    /** List of enabled modules */
+    /**
+     * List of enabled modules
+     */
     private List<String> modules = new ArrayList<>();
 
-    /** List of modules to skip [files] section validation */
+    /**
+     * List of modules to skip [files] section validation
+     */
     private Set<String> skipFileValidationModules = new HashSet<>();
 
-    /** Map of enabled modules to the source of where that activation occurred */
+    /**
+     * Map of enabled modules to the source of where that activation occurred
+     */
     Map<String, List<String>> sources = new HashMap<>();
 
-    /** List of all active [files] sections from enabled modules */
+    /**
+     * List of all active [files] sections from enabled modules
+     */
     private List<FileArg> files = new ArrayList<>();
 
-    /** List of all active [lib] sections from enabled modules */
+    /**
+     * List of all active [lib] sections from enabled modules
+     */
     private Classpath classpath;
 
-    /** List of all active [xml] sections from enabled modules */
+    /**
+     * List of all active [xml] sections from enabled modules
+     */
     private List<Path> xmls = new ArrayList<>();
 
-    /** JVM arguments, found via command line and in all active [exec] sections from enabled modules */
+    /**
+     * List of all active [jpms] sections for enabled modules
+     */
+    private Set<String> jmodAdds = new LinkedHashSet<>();
+    private Map<String, Set<String>> jmodPatch = new LinkedHashMap<>();
+    private Map<String, Set<String>> jmodOpens = new LinkedHashMap<>();
+    private Map<String, Set<String>> jmodExports = new LinkedHashMap<>();
+    private Map<String, Set<String>> jmodReads = new LinkedHashMap<>();
+
+    /**
+     * JVM arguments, found via command line and in all active [exec] sections from enabled modules
+     */
     private List<String> jvmArgs = new ArrayList<>();
 
-    /** List of all xml references found directly on command line or start.ini */
+    /**
+     * List of all xml references found directly on command line or start.ini
+     */
     private List<String> xmlRefs = new ArrayList<>();
 
-    /** List of all property references found directly on command line or start.ini */
+    /**
+     * List of all property references found directly on command line or start.ini
+     */
     private List<String> propertyFileRefs = new ArrayList<>();
 
-    /** List of all property files */
+    /**
+     * List of all property files
+     */
     private List<Path> propertyFiles = new ArrayList<>();
 
     private Props properties = new Props();
-    private Map<String,String> systemPropertySource = new HashMap<>();
+    private Map<String, String> systemPropertySource = new HashMap<>();
     private List<String> rawLibs = new ArrayList<>();
 
     // jetty.base - build out commands
-    /** --add-to-start[d]=[module,[module]] */
+    /**
+     * --add-to-start[d]=[module,[module]]
+     */
     private List<String> startModules = new ArrayList<>();
 
     // module inspection commands
-    /** --write-module-graph=[filename] */
+    /**
+     * --write-module-graph=[filename]
+     */
     private String moduleGraphFilename;
 
-    /** Collection of all modules */
+    /**
+     * Collection of all modules
+     */
     private Modules allModules;
 
-    /** Should the server be run? */
+    /**
+     * Should the server be run?
+     */
     private boolean run = true;
 
-    /** Files related args */
+    /**
+     * Files related args
+     */
     private boolean createFiles = false;
     private boolean licenseCheckRequired = false;
     private boolean testingMode = false;
@@ -174,12 +219,13 @@ public class StartArgs
     private boolean listConfig = false;
     private boolean version = false;
     private boolean dryRun = false;
+    private boolean jpms = false;
     private boolean createStartd = false;
     private boolean updateIni = false;
     private String mavenBaseUri;
 
     private boolean exec = false;
-    private String exec_properties;
+    private String execProperties;
     private boolean approveAllLicenses = false;
 
     public StartArgs(BaseHome baseHome)
@@ -192,11 +238,11 @@ public class StartArgs
     {
         if (module.isSkipFilesValidation())
         {
-            StartLog.debug("Not validating %s [files] for %s",module,uriLocation);
+            StartLog.debug("Not validating %s [files] for %s", module, uriLocation);
             return;
         }
 
-        FileArg arg = new FileArg(module,properties.expand(uriLocation));
+        FileArg arg = new FileArg(module, properties.expand(uriLocation));
         if (!files.contains(arg))
         {
             files.add(arg);
@@ -242,7 +288,7 @@ public class StartArgs
 
         for (Path xml : xmls)
         {
-            System.out.printf(" %s%n",baseHome.toShortForm(xml.toAbsolutePath()));
+            System.out.printf(" %s%n", baseHome.toShortForm(xml.toAbsolutePath()));
         }
     }
 
@@ -279,13 +325,13 @@ public class StartArgs
         System.out.println("--------------------");
         for (ConfigSource config : baseHome.getConfigSources())
         {
-            System.out.printf(" %s",config.getId());
+            System.out.printf(" %s", config.getId());
             if (config instanceof DirConfigSource)
             {
                 DirConfigSource dirsource = (DirConfigSource)config;
                 if (dirsource.isPropertyBased())
                 {
-                    System.out.printf(" -> %s",dirsource.getDir());
+                    System.out.printf(" -> %s", dirsource.getDir());
                 }
             }
             System.out.println();
@@ -311,11 +357,11 @@ public class StartArgs
             String value = System.getProperty(jvmArgKey);
             if (value != null)
             {
-                System.out.printf(" %s = %s%n",jvmArgKey,value);
+                System.out.printf(" %s = %s%n", jvmArgKey, value);
             }
             else
             {
-                System.out.printf(" %s%n",jvmArgKey);
+                System.out.printf(" %s%n", jvmArgKey);
             }
         }
     }
@@ -348,7 +394,7 @@ public class StartArgs
         {
             dumpProperty(key);
         }
-        
+
         for (Path path : propertyFiles)
         {
             String p = baseHome.toShortForm(path);
@@ -360,18 +406,18 @@ public class StartArgs
                     props.load(new FileInputStream(path.toFile()));
                     for (Object key : props.keySet())
                     {
-                        System.out.printf(" %s:%s = %s%n",p,key,props.getProperty(String.valueOf(key)));
+                        System.out.printf(" %s:%s = %s%n", p, key, props.getProperty(String.valueOf(key)));
                     }
                 }
-                catch (Throwable th)
+                catch (Throwable ex)
                 {
-                    System.out.printf(" %s NOT READABLE!%n",p);
+                    System.out.printf(" %s NOT READABLE!%n", p);
                 }
             }
             else
             {
 
-                System.out.printf(" %s NOT READABLE!%n",p);
+                System.out.printf(" %s NOT READABLE!%n", p);
             }
         }
     }
@@ -381,13 +427,13 @@ public class StartArgs
         Prop prop = properties.getProp(key);
         if (prop == null)
         {
-            System.out.printf(" %s (not defined)%n",key);
+            System.out.printf(" %s (not defined)%n", key);
         }
         else
         {
-            System.out.printf(" %s = %s%n",key,prop.value);
+            System.out.printf(" %s = %s%n", key, prop.value);
             if (StartLog.isDebugEnabled())
-                System.out.printf("   origin: %s%n",prop.source);
+                System.out.printf("   origin: %s%n", prop.source);
         }
     }
 
@@ -403,26 +449,26 @@ public class StartArgs
             return;
         }
 
-        List<String> sortedKeys = new ArrayList<>();
-        sortedKeys.addAll(systemPropertySource.keySet());
+        List<String> sortedKeys = new ArrayList<>(systemPropertySource.keySet());
         Collections.sort(sortedKeys);
 
         for (String key : sortedKeys)
+        {
             dumpSystemProperty(key);
+        }
     }
 
     private void dumpSystemProperty(String key)
     {
         String value = System.getProperty(key);
         String source = systemPropertySource.get(key);
-        System.out.printf(" %s = %s (%s)%n",key,value,source);
+        System.out.printf(" %s = %s (%s)%n", key, value, source);
     }
 
     /**
      * Ensure that the System Properties are set (if defined as a System property, or start.config property, or start.ini property)
      *
-     * @param key
-     *            the key to be sure of
+     * @param key the key to be sure of
      */
     private void ensureSystemPropertySet(String key)
     {
@@ -434,43 +480,39 @@ public class StartArgs
         if (properties.containsKey(key))
         {
             Prop prop = properties.getProp(key);
-            if (prop==null)
+            if (prop == null)
                 return; // no value set;
-            
+
             String val = properties.expand(prop.value);
             // setup system property
-            systemPropertySource.put(key,"property:"+prop.source);
-            System.setProperty(key,val);
+            systemPropertySource.put(key, "property:" + prop.source);
+            System.setProperty(key, val);
+        }
+    }
+
+    /**
+     * Expand any command line added {@code --lib} lib references.
+     */
+    public void expandSystemProperties()
+    {
+        StartLog.debug("Expanding System Properties");
+
+        for (String key : systemPropertySource.keySet())
+        {
+            String value = properties.getString(key);
+            if (value != null)
+            {
+                String expanded = properties.expand(value);
+                if (!value.equals(expanded))
+                    System.setProperty(key, expanded);
+            }
         }
     }
 
     /**
      * Expand any command line added {@code --lib} lib references.
      *
-     * @throws IOException
-     *             if unable to expand the libraries
-     */
-    public void expandSystemProperties() throws IOException
-    {
-        StartLog.debug("Expanding System Properties");
-        
-        for (String key : systemPropertySource.keySet())
-        {
-            String value = properties.getString(key);
-            if (value!=null)
-            {
-                String expanded = properties.expand(value);
-                if (!value.equals(expanded))
-                    System.setProperty(key,expanded);
-            }
-        }
-    }
-    
-    /**
-     * Expand any command line added <code>--lib</code> lib references.
-     *
-     * @throws IOException
-     *             if unable to expand the libraries
+     * @throws IOException if unable to expand the libraries
      */
     public void expandLibs() throws IOException
     {
@@ -482,7 +524,7 @@ public class StartArgs
             StartLog.debug("expanded = " + libref);
 
             // perform path escaping (needed by windows)
-            libref = libref.replaceAll("\\\\([^\\\\])","\\\\\\\\$1");
+            libref = libref.replaceAll("\\\\([^\\\\])", "\\\\\\\\$1");
 
             for (Path libpath : baseHome.getPaths(libref))
             {
@@ -494,10 +536,8 @@ public class StartArgs
     /**
      * Build up the Classpath and XML file references based on enabled Module list.
      *
-     * @param activeModules
-     *            the active (selected) modules
-     * @throws IOException
-     *             if unable to expand the modules
+     * @param activeModules the active (selected) modules
+     * @throws IOException if unable to expand the modules
      */
     public void expandModules(List<Module> activeModules) throws IOException
     {
@@ -529,14 +569,78 @@ public class StartArgs
                 // Straight Reference
                 xmlRef = properties.expand(xmlRef);
                 Path xmlfile = baseHome.getPath(xmlRef);
-                addUniqueXmlFile(xmlRef,xmlfile);
+                addUniqueXmlFile(xmlRef, xmlfile);
             }
 
             // Register Download operations
             for (String file : module.getFiles())
             {
-                StartLog.debug("Adding module specified file: %s",file);
-                addFile(module,file);
+                StartLog.debug("Adding module specified file: %s", file);
+                addFile(module, file);
+            }
+        }
+    }
+
+    void expandJPMS(List<Module> activeModules) throws IOException
+    {
+        for (Module module : activeModules)
+        {
+            for (String line : module.getJPMS())
+            {
+                line = properties.expand(line);
+                String directive;
+                if (line.startsWith(directive = "add-modules:"))
+                {
+                    String[] names = line.substring(directive.length()).split(",");
+                    Arrays.stream(names).map(String::trim).collect(Collectors.toCollection(() -> jmodAdds));
+                }
+                else if (line.startsWith(directive = "patch-module:"))
+                {
+                    parseJPMSKeyValue(module, line, directive, true, jmodPatch);
+                }
+                else if (line.startsWith(directive = "add-opens:"))
+                {
+                    parseJPMSKeyValue(module, line, directive, false, jmodOpens);
+                }
+                else if (line.startsWith(directive = "add-exports:"))
+                {
+                    parseJPMSKeyValue(module, line, directive, false, jmodExports);
+                }
+                else if (line.startsWith(directive = "add-reads:"))
+                {
+                    parseJPMSKeyValue(module, line, directive, false, jmodReads);
+                }
+                else
+                {
+                    throw new IllegalArgumentException("Invalid [jpms] directive " + directive + " in module " + module.getName() + ": " + line);
+                }
+            }
+        }
+        StartLog.debug("Expanded JPMS directives:%nadd-modules: %s%npatch-modules: %s%nadd-opens: %s%nadd-exports: %s%nadd-reads: %s",
+            jmodAdds, jmodPatch, jmodOpens, jmodExports, jmodReads);
+    }
+
+    private void parseJPMSKeyValue(Module module, String line, String directive, boolean valueIsFile, Map<String, Set<String>> output) throws IOException
+    {
+        String valueString = line.substring(directive.length());
+        int equals = valueString.indexOf('=');
+        if (equals <= 0)
+            throw new IllegalArgumentException("Invalid [jpms] directive " + directive + " in module " + module.getName() + ": " + line);
+        String delimiter = valueIsFile ? File.pathSeparator : ",";
+        String key = valueString.substring(0, equals).trim();
+        String[] values = valueString.substring(equals + 1).split(delimiter);
+        Set<String> result = output.computeIfAbsent(key, k -> new LinkedHashSet<>());
+        for (String value : values)
+        {
+            value = value.trim();
+            if (valueIsFile)
+            {
+                List<Path> paths = baseHome.getPaths(value);
+                paths.stream().map(Path::toAbsolutePath).map(Path::toString).collect(Collectors.toCollection(() -> result));
+            }
+            else
+            {
+                result.add(value);
             }
         }
     }
@@ -588,16 +692,16 @@ public class StartArgs
             cmd.addRawArg("-Djetty.home=" + baseHome.getHome());
             cmd.addRawArg("-Djetty.base=" + baseHome.getBase());
 
-            for (String x : jvmArgs)
+            for (String x : getJvmArgs())
             {
                 if (x.startsWith("-D"))
-                {            
-                    String[] assign = x.substring(2).split("=",2);
+                {
+                    String[] assign = x.substring(2).split("=", 2);
                     String key = assign[0];
-                    String value = assign.length==1?"":assign[1];
+                    String value = assign.length == 1 ? "" : assign[1];
 
-                    Prop p = processSystemProperty(key,value,null);
-                    cmd.addRawArg("-D"+p.key+"="+getProperties().expand(p.value));
+                    Prop p = processSystemProperty(key, value, null);
+                    cmd.addRawArg("-D" + p.key + "=" + getProperties().expand(p.value));
                 }
                 else
                 {
@@ -609,37 +713,93 @@ public class StartArgs
             for (String propKey : systemPropertySource.keySet())
             {
                 String value = System.getProperty(propKey);
-                cmd.addEqualsArg("-D" + propKey,value);
+                cmd.addEqualsArg("-D" + propKey, value);
             }
 
-            cmd.addRawArg("-cp");
-            cmd.addRawArg(classpath.toString());
-            cmd.addRawArg(getMainClassname());
+            if (isJPMS())
+            {
+                Map<Boolean, List<File>> dirsAndFiles = StreamSupport.stream(classpath.spliterator(), false)
+                    .collect(Collectors.groupingBy(File::isDirectory));
+                List<File> files = dirsAndFiles.get(false);
+                if (files != null && !files.isEmpty())
+                {
+                    cmd.addRawArg("--module-path");
+                    String modules = files.stream()
+                        .map(File::getAbsolutePath)
+                        .collect(Collectors.joining(File.pathSeparator));
+                    cmd.addRawArg(modules);
+                }
+                List<File> dirs = dirsAndFiles.get(true);
+                if (dirs != null && !dirs.isEmpty())
+                {
+                    cmd.addRawArg("--class-path");
+                    String directories = dirs.stream()
+                        .map(File::getAbsolutePath)
+                        .collect(Collectors.joining(File.pathSeparator));
+                    cmd.addRawArg(directories);
+                }
+
+                if (!jmodAdds.isEmpty())
+                {
+                    cmd.addRawArg("--add-modules");
+                    cmd.addRawArg(String.join(",", jmodAdds));
+                }
+                for (Map.Entry<String, Set<String>> entry : jmodPatch.entrySet())
+                {
+                    cmd.addRawArg("--patch-module");
+                    cmd.addRawArg(entry.getKey() + "=" + String.join(File.pathSeparator, entry.getValue()));
+                }
+                for (Map.Entry<String, Set<String>> entry : jmodOpens.entrySet())
+                {
+                    cmd.addRawArg("--add-opens");
+                    cmd.addRawArg(entry.getKey() + "=" + String.join(",", entry.getValue()));
+                }
+                for (Map.Entry<String, Set<String>> entry : jmodExports.entrySet())
+                {
+                    cmd.addRawArg("--add-exports");
+                    cmd.addRawArg(entry.getKey() + "=" + String.join(",", entry.getValue()));
+                }
+                for (Map.Entry<String, Set<String>> entry : jmodReads.entrySet())
+                {
+                    cmd.addRawArg("--add-reads");
+                    cmd.addRawArg(entry.getKey() + "=" + String.join(",", entry.getValue()));
+                }
+
+                cmd.addRawArg("--module");
+                cmd.addRawArg(getMainClassname());
+            }
+            else
+            {
+                cmd.addRawArg("-cp");
+                cmd.addRawArg(classpath.toString());
+                cmd.addRawArg(getMainClassname());
+            }
         }
 
-       
         // pass properties as args or as a file
-        if (dryRun && exec_properties == null)
+        if (dryRun && execProperties == null)
         {
             for (Prop p : properties)
+            {
                 cmd.addRawArg(CommandLineBuilder.quote(p.key) + "=" + CommandLineBuilder.quote(p.value));
+            }
         }
         else if (properties.size() > 0)
         {
-            Path prop_path;
-            if (exec_properties == null)
+            Path propPath;
+            if (execProperties == null)
             {
-                prop_path = Files.createTempFile("start_",".properties");
-                prop_path.toFile().deleteOnExit();
+                propPath = Files.createTempFile("start_", ".properties");
+                propPath.toFile().deleteOnExit();
             }
             else
-                prop_path = new File(exec_properties).toPath();
+                propPath = new File(execProperties).toPath();
 
-            try (OutputStream out = Files.newOutputStream(prop_path))
+            try (OutputStream out = Files.newOutputStream(propPath))
             {
-                properties.store(out,"start.jar properties");
+                properties.store(out, "start.jar properties");
             }
-            cmd.addRawArg(prop_path.toAbsolutePath().toString());
+            cmd.addRawArg(propPath.toAbsolutePath().toString());
         }
 
         for (Path xml : xmls)
@@ -657,8 +817,8 @@ public class StartArgs
 
     public String getMainClassname()
     {
-        String mainclass = System.getProperty("jetty.server",SERVER_MAIN);
-        return System.getProperty("main.class",mainclass);
+        String mainClass = System.getProperty("jetty.server", isJPMS() ? MODULE_MAIN_CLASS : MAIN_CLASS);
+        return System.getProperty("main.class", mainClass);
     }
 
     public String getMavenLocalRepoDir()
@@ -682,10 +842,10 @@ public class StartArgs
         if (Utils.isBlank(localRepo))
         {
             // Try generic env variable
-            String home = System.getenv("HOME");
-            Path home_m2_repository = new File(new File(home,".m2"),"repository").toPath();
-            if (Files.exists(home_m2_repository))
-                localRepo = home_m2_repository.toString();
+            Path home = Paths.get(System.getProperty("user.home"));
+            Path localMavenRepository = home.resolve(".m2/repository");
+            if (Files.exists(localMavenRepository))
+                localRepo = localMavenRepository.toString();
         }
 
         // TODO: possibly use Eclipse Aether to manage it ?
@@ -704,7 +864,7 @@ public class StartArgs
             return localRepoDir;
         }
 
-        StartLog.warn("Not a valid maven local repository directory: %s",localRepoDir);
+        StartLog.warn("Not a valid maven local repository directory: %s", localRepoDir);
 
         // Not a valid repository directory, skip it
         return null;
@@ -737,7 +897,7 @@ public class StartArgs
 
     public boolean hasJvmArgs()
     {
-        return jvmArgs.size() > 0;
+        return !jvmArgs.isEmpty();
     }
 
     public boolean hasSystemProperties()
@@ -765,6 +925,11 @@ public class StartArgs
         return createFiles;
     }
 
+    public boolean isJPMS()
+    {
+        return jpms;
+    }
+
     public boolean isDryRun()
     {
         return dryRun;
@@ -782,7 +947,7 @@ public class StartArgs
 
     public boolean isNormalMainClass()
     {
-        return SERVER_MAIN.equals(getMainClassname());
+        return MAIN_CLASS.equals(getMainClassname());
     }
 
     public boolean isHelp()
@@ -840,7 +1005,7 @@ public class StartArgs
         return mavenBaseUri;
     }
 
-    public void parse( ConfigSources sources)
+    public void parse(ConfigSources sources)
     {
         ListIterator<ConfigSource> iter = sources.reverseListIterator();
         while (iter.hasPrevious())
@@ -848,7 +1013,7 @@ public class StartArgs
             ConfigSource source = iter.previous();
             for (RawArgs.Entry arg : source.getArgs())
             {
-                parse(arg.getLine(),arg.getOrigin());
+                parse(arg.getLine(), arg.getOrigin());
             }
         }
     }
@@ -856,10 +1021,8 @@ public class StartArgs
     /**
      * Parse a single line of argument.
      *
-     * @param rawarg
-     *            the raw argument to parse
-     * @param source
-     *            the origin of this line of argument
+     * @param rawarg the raw argument to parse
+     * @param source the origin of this line of argument
      */
     public void parse(final String rawarg, String source)
     {
@@ -868,7 +1031,7 @@ public class StartArgs
             return;
         }
 
-        StartLog.debug("parse(\"%s\", \"%s\")",rawarg,source);
+        StartLog.debug("parse(\"%s\", \"%s\")", rawarg, source);
 
         final String arg = rawarg.trim();
 
@@ -897,7 +1060,7 @@ public class StartArgs
 
         if ("--testing-mode".equals(arg))
         {
-            System.setProperty("org.eclipse.jetty.start.testing","true");
+            System.setProperty("org.eclipse.jetty.start.testing", "true");
             testingMode = true;
             return;
         }
@@ -907,15 +1070,15 @@ public class StartArgs
             Path commands = baseHome.getPath(Props.getValue(arg));
 
             if (!Files.exists(commands) || !Files.isReadable(commands))
-                throw new UsageException(UsageException.ERR_BAD_ARG,"--commands file must be readable: %s",commands);
+                throw new UsageException(UsageException.ERR_BAD_ARG, "--commands file must be readable: %s", commands);
             try
             {
                 TextFile file = new TextFile(commands);
-                StartLog.info("reading commands from %s",baseHome.toShortForm(commands));
+                StartLog.info("reading commands from %s", baseHome.toShortForm(commands));
                 String s = source + "|" + baseHome.toShortForm(commands);
                 for (String line : file)
                 {
-                    parse(line,s);
+                    parse(line, s);
                 }
             }
             catch (IOException e)
@@ -939,7 +1102,7 @@ public class StartArgs
 
         if (arg.startsWith("--download="))
         {
-            addFile(null,Props.getValue(arg));
+            addFile(null, Props.getValue(arg));
             run = false;
             createFiles = true;
             return;
@@ -974,6 +1137,14 @@ public class StartArgs
             return;
         }
 
+        if ("--jpms".equals(arg))
+        {
+            jpms = true;
+            // Need to fork because we cannot use JDK 9 Module APIs.
+            exec = true;
+            return;
+        }
+
         if ("--dry-run".equals(arg) || "--exec-print".equals(arg))
         {
             dryRun = true;
@@ -991,9 +1162,9 @@ public class StartArgs
         // Assign a fixed name to the property file for exec
         if (arg.startsWith("--exec-properties="))
         {
-            exec_properties = Props.getValue(arg);
-            if (!exec_properties.endsWith(".properties"))
-                throw new UsageException(UsageException.ERR_BAD_ARG,"--exec-properties filename must have .properties suffix: %s",exec_properties);
+            execProperties = Props.getValue(arg);
+            if (!execProperties.endsWith(".properties"))
+                throw new UsageException(UsageException.ERR_BAD_ARG, "--exec-properties filename must have .properties suffix: %s", execProperties);
             return;
         }
 
@@ -1011,7 +1182,7 @@ public class StartArgs
 
             if (cp != null)
             {
-                StringTokenizer t = new StringTokenizer(cp,File.pathSeparator);
+                StringTokenizer t = new StringTokenizer(cp, File.pathSeparator);
                 while (t.hasMoreTokens())
                 {
                     rawLibs.add(t.nextToken());
@@ -1055,7 +1226,7 @@ public class StartArgs
         if (arg.startsWith("--add-to-startd="))
         {
             String value = Props.getValue(arg);
-            StartLog.warn("--add-to-startd is deprecated! Instead use: --create-startd --add-to-start=%s",value);
+            StartLog.warn("--add-to-startd is deprecated! Instead use: --create-startd --add-to-start=%s", value);
             createStartd = true;
             startModules.addAll(Props.getValues(arg));
             run = false;
@@ -1076,7 +1247,7 @@ public class StartArgs
         if (arg.startsWith("--module="))
         {
             List<String> moduleNames = Props.getValues(arg);
-            enableModules(source,moduleNames);
+            enableModules(source, moduleNames);
             return;
         }
 
@@ -1084,10 +1255,7 @@ public class StartArgs
         if (arg.startsWith("--skip-file-validation="))
         {
             List<String> moduleNames = Props.getValues(arg);
-            for (String moduleName : moduleNames)
-            {
-                skipFileValidationModules.add(moduleName);
-            }
+            skipFileValidationModules.addAll(moduleNames);
             return;
         }
 
@@ -1102,17 +1270,17 @@ public class StartArgs
         // Start property (syntax similar to System property)
         if (arg.startsWith("-D"))
         {
-            String[] assign = arg.substring(2).split("=",2);
+            String[] assign = arg.substring(2).split("=", 2);
             String key = assign[0];
-            String value = assign.length==1?"":assign[1];
-            
-            Prop p = processSystemProperty(key,value,source);
-            systemPropertySource.put(p.key,p.source);
-            setProperty(p.key,p.value,p.source);
-            System.setProperty(p.key,p.value);
+            String value = assign.length == 1 ? "" : assign[1];
+
+            Prop p = processSystemProperty(key, value, source);
+            systemPropertySource.put(p.key, p.source);
+            setProperty(p.key, p.value, p.source);
+            System.setProperty(p.key, p.value);
             return;
         }
-        
+
         // Anything else with a "-" is considered a JVM argument
         if (arg.startsWith("-"))
         {
@@ -1128,11 +1296,11 @@ public class StartArgs
         int equals = arg.indexOf('=');
         if (equals >= 0)
         {
-            String key = arg.substring(0,equals);
+            String key = arg.substring(0, equals);
             String value = arg.substring(equals + 1);
 
-            processAndSetProperty(key,value,source);
-            
+            processAndSetProperty(key, value, source);
+
             return;
         }
 
@@ -1158,48 +1326,48 @@ public class StartArgs
         }
 
         // Anything else is unrecognized
-        throw new UsageException(UsageException.ERR_BAD_ARG,"Unrecognized argument: \"%s\" in %s",arg,source);
+        throw new UsageException(UsageException.ERR_BAD_ARG, "Unrecognized argument: \"%s\" in %s", arg, source);
     }
-    
+
     protected Prop processSystemProperty(String key, String value, String source)
     {
         if (key.endsWith("+"))
         {
-            key = key.substring(0,key.length() - 1);
+            key = key.substring(0, key.length() - 1);
             String orig = System.getProperty(key);
             if (orig == null || orig.isEmpty())
             {
                 if (value.startsWith(","))
                     value = value.substring(1);
             }
-            else 
+            else
             {
                 value = orig + value;
-                if (source!=null && systemPropertySource.containsKey(key))
+                if (source != null && systemPropertySource.containsKey(key))
                     source = systemPropertySource.get(key) + "," + source;
             }
         }
         else if (key.endsWith("?"))
         {
-            key = key.substring(0,key.length() - 1);
+            key = key.substring(0, key.length() - 1);
             String preset = System.getProperty(key);
-            if (preset!=null)
+            if (preset != null)
             {
                 value = preset;
                 source = systemPropertySource.get(key);
             }
-            else if (source!=null)
-                source = source+"?=";
+            else if (source != null)
+                source = source + "?=";
         }
 
         return new Prop(key, value, source);
     }
-    
-    protected void processAndSetProperty(String key,String value,String source)
+
+    protected void processAndSetProperty(String key, String value, String source)
     {
         if (key.endsWith("+"))
         {
-            key = key.substring(0,key.length() - 1);
+            key = key.substring(0, key.length() - 1);
             Prop orig = getProperties().getProp(key);
             if (orig == null)
             {
@@ -1214,29 +1382,24 @@ public class StartArgs
         }
         else if (key.endsWith("?"))
         {
-            key = key.substring(0,key.length() - 1);
+            key = key.substring(0, key.length() - 1);
             Prop preset = getProperties().getProp(key);
-            if (preset!=null)
+            if (preset != null)
                 return;
-            
-            if (source!=null)
-                source = source+"?=";
+
+            if (source != null)
+                source = source + "?=";
         }
-        
-        setProperty(key,value,source);
+
+        setProperty(key, value, source);
     }
-    
+
     private void enableModules(String source, List<String> moduleNames)
     {
         for (String moduleName : moduleNames)
         {
             modules.add(moduleName);
-            List<String> list = sources.get(moduleName);
-            if (list == null)
-            {
-                list = new ArrayList<>();
-                sources.put(moduleName,list);
-            }
+            List<String> list = sources.computeIfAbsent(moduleName, k -> new ArrayList<>());
             list.add(source);
         }
     }
@@ -1252,7 +1415,7 @@ public class StartArgs
             {
                 xmlfile = baseHome.getPath("etc/" + xmlRef);
             }
-            addUniqueXmlFile(xmlRef,xmlfile);
+            addUniqueXmlFile(xmlRef, xmlfile);
         }
     }
 
@@ -1267,7 +1430,7 @@ public class StartArgs
             {
                 propertyFile = baseHome.getPath("etc/" + propertyFileRef);
             }
-            addUniquePropertyFile(propertyFileRef,propertyFile);
+            addUniquePropertyFile(propertyFileRef, propertyFile);
         }
     }
 
@@ -1281,24 +1444,24 @@ public class StartArgs
         // Special / Prevent override from start.ini's
         if (key.equals("jetty.home"))
         {
-            properties.setProperty("jetty.home",System.getProperty("jetty.home"),source);
+            properties.setProperty("jetty.home", System.getProperty("jetty.home"), source);
             return;
         }
 
         // Special / Prevent override from start.ini's
         if (key.equals("jetty.base"))
         {
-            properties.setProperty("jetty.base",System.getProperty("jetty.base"),source);
+            properties.setProperty("jetty.base", System.getProperty("jetty.base"), source);
             return;
         }
 
-        properties.setProperty(key,value,source);
+        properties.setProperty(key, value, source);
         if (key.equals("java.version"))
         {
             try
             {
                 JavaVersion ver = JavaVersion.parse(value);
-                properties.setProperty("java.version.platform",Integer.toString(ver.getPlatform()),source);
+                properties.setProperty("java.version.platform", Integer.toString(ver.getPlatform()), source);
                 // @deprecated - below will be removed in Jetty 10.x
                 properties.setProperty("java.version.major", Integer.toString(ver.getMajor()), "Deprecated");
                 properties.setProperty("java.version.minor", Integer.toString(ver.getMinor()), "Deprecated");
@@ -1306,7 +1469,7 @@ public class StartArgs
             }
             catch (Throwable x)
             {
-                UsageException ue = new UsageException(UsageException.ERR_BAD_ARG, x.getMessage()==null?x.toString():x.getMessage());
+                UsageException ue = new UsageException(UsageException.ERR_BAD_ARG, x.getMessage() == null ? x.toString() : x.getMessage());
                 ue.initCause(x);
                 throw ue;
             }
@@ -1327,17 +1490,7 @@ public class StartArgs
     @Override
     public String toString()
     {
-        StringBuilder builder = new StringBuilder();
-        builder.append("StartArgs [enabledModules=");
-        builder.append(modules);
-        builder.append(", xmlRefs=");
-        builder.append(xmlRefs);
-        builder.append(", properties=");
-        builder.append(properties);
-        builder.append(", jvmArgs=");
-        builder.append(jvmArgs);
-        builder.append("]");
-        return builder.toString();
+        return String.format("%s[enabledModules=%s, xmlRefs=%s, properties=%s, jvmArgs=%s]",
+            getClass().getSimpleName(), modules, xmlRefs, properties, jvmArgs);
     }
-    
 }
